View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032088 | Open CASCADE | OCCT:Modeling Algorithms | public | 2021-01-27 17:05 | 2021-05-01 13:32 |
Reporter | emv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032088: Modeling Algorithms - Empty result of offset operation in mode "Complete" join type "Intersection" | ||||
Description | The result of offset operation in mode "Complete" with join type "Intersection" on a planar solid is a null shape. Original issue - http://asml.redmine.opencascade.com/issues/159 | ||||
Steps To Reproduce | restore [locate_data_file bug32088_input.brep] s offsetparameter 1.e-7 c i r offsetload s 5 offsetperform r | ||||
Tags | No tags attached. | ||||
Test case number | offset/shape_type_i_c/XY1,XY2,XY3,XY4,XY5,XY6,XY7 | ||||
|
Branch CR32088 has been created by emv. SHA-1: 22d3ffda122c698c31274ad4785585866caa15cc Detailed log of new commits: Author: emv Date: Wed Jan 27 16:24:11 2021 +0300 0032088: Modeling Algorithms - Empty result of offset operation in mode "Complete" join type "Intersection" Mark inverted edges located inside loops of invalid edges as invalid as well. |
|
Dear Mikhail, could you please review the branch CR32088? Test results - http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR32088-master-emv/view/COMPARE/ Please note, that a child issue is reported to resolve the cases detected while working on this fix (cases with offset values 10 and above). |
|
Please raise CR32088 into occt. |
|
Combination - OCCT branch : master Products branch : master was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17839.600000000362 / 17844.450000000477 [-0.03%] Products Total CPU difference: 11562.480000000109 / 11558.800000000136 [+0.03%] Windows-64-VC14: OCCT Total CPU difference: 19303.28125 / 19431.828125 [-0.66%] Products Total CPU difference: 12894.515625 / 12871.203125 [+0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32088 has been deleted by inv. SHA-1: 22d3ffda122c698c31274ad4785585866caa15cc |
occt: master 62eafa5a 2021-01-27 13:24:11 Committer: bugmaster Details Diff |
0032088: Modeling Algorithms - Empty result of offset operation in mode "Complete" join type "Intersection" Mark inverted edges located inside loops of invalid edges as invalid as well. |
Affected Issues 0032088 |
|
mod - src/BRepOffset/BRepOffset_MakeOffset_1.cxx | Diff File | ||
mod - tests/offset/shape_type_i_c/XU3 | Diff File | ||
add - tests/offset/shape_type_i_c/XY1 | Diff File | ||
add - tests/offset/shape_type_i_c/XY2 | Diff File | ||
add - tests/offset/shape_type_i_c/XY3 | Diff File | ||
add - tests/offset/shape_type_i_c/XY4 | Diff File | ||
add - tests/offset/shape_type_i_c/XY5 | Diff File | ||
add - tests/offset/shape_type_i_c/XY6 | Diff File | ||
add - tests/offset/shape_type_i_c/XY7 | Diff File | ||
mod - tests/offset/shape_type_i_c/ZE7 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-01-27 17:05 | emv | New Issue | |
2021-01-27 17:05 | emv | Assigned To | => msv |
2021-01-27 17:05 | emv | Assigned To | msv => emv |
2021-01-27 17:05 | emv | Status | new => assigned |
2021-01-27 17:05 | emv | Steps to Reproduce Updated | |
2021-04-26 17:20 | git | Note Added: 0100598 | |
2021-04-26 20:03 | emv | Note Added: 0100602 | |
2021-04-26 20:03 | emv | Assigned To | emv => msv |
2021-04-26 20:03 | emv | Status | assigned => resolved |
2021-04-27 18:06 | msv | Note Added: 0100621 | |
2021-04-27 18:06 | msv | Assigned To | msv => bugmaster |
2021-04-27 18:06 | msv | Status | resolved => reviewed |
2021-05-01 12:27 | bugmaster | Note Added: 0100718 | |
2021-05-01 12:27 | bugmaster | Status | reviewed => tested |
2021-05-01 12:37 | bugmaster | Test case number | => offset/shape_type_i_c/XY1,XY2,XY3,XY4,XY5,XY6,XY7 |
2021-05-01 12:44 | bugmaster | Changeset attached | => occt master 62eafa5a |
2021-05-01 12:44 | bugmaster | Status | tested => verified |
2021-05-01 12:44 | bugmaster | Resolution | open => fixed |
2021-05-01 13:32 | git | Note Added: 0100740 |