0032088: Modeling Algorithms - Empty result of offset operation in mode "Complete" join type "Intersection"

Mark inverted edges located inside loops of invalid edges as invalid as well.